@@ -3,6 +3,10 @@ Revision history for Perl extension AnyEvent.
 	- use Config module instead of POSIX module to detect signal names
           in AnyEvent::Strict and AnyEvent::Impl::EventLib, as the POSIX
           module doesn't even have all POSIX signals :/.
+        - use more workarounds around the many refcnt/corruption bugs in
+          Event::Lib.
+        - work around a race condition in perl's select, causing t/03_child.t
+          to rarely fail.
 
 4.81 Thu Jul  9 10:30:30 CEST 2009
         - AnyEvent::Handle didn't properly diagnose write errors
